# syscall-digest

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  rustfmt.toml
.vim/: coc-settings.json
syscall-digest/: Cargo.toml
syscall-digest-common/: Cargo.toml
syscall-digest-common/src/: lib.rs
syscall-digest-ebpf/: Cargo.toml
syscall-digest-ebpf/src/: main.rs
syscall-digest/src/: main.rs
xtask/: Cargo.toml
xtask/src/: build_ebpf.rs  codegen.rs  run.rs
